# osslsigncode

./: CHANGES  MD5SUMS  Makefile.in  README  TODO  aclocal.m4  compat.h  config.h.in  configure  configure.ac  getopt.c  osslsigncode.c
autom4te.cache/: output.0  traces.0
